.metadata/.plugins/org.eclipse.cdt.ui/Queue_kullanimi_freertos.build.log
14:15:59 **** Incremental Build of configuration Debug for project Queue_kullanimi_freertos ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c ..\src\main.c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DSTM32F4XX -DSTM32F40XX -DUSE_STDPERIPH_DRIVER -DUSE_STM32F4_DISCOVERY -DHSE_VALUE=8000000 -I../src -IC:\Users\ahmet\Atollic\TrueSTUDIO\STM32_workspace_9.3\Queue_kullanimi_freertos\FreeRTOSConfig -IC:\Users\ahmet\Atollic\TrueSTUDIO\STM32_workspace_9.3\Queue_kullanimi_freertos\MiddleWares\Third_Party\FreeRTOS\org\Source\include -IC:\Users\ahmet\Atollic\TrueSTUDIO\STM32_workspace_9.3\Queue_kullanimi_freertos\MiddleWares\Third_Party\FreeRTOS\org\Source\portable\GCC\ARM_CM4F -IC:\Users\ahmet\Atollic\TrueSTUDIO\STM32_workspace_9.3\Queue_kullanimi_freertos\MiddleWares\Third_Party\FreeRTOS\org\Source\portable\MemMang -I../Libraries/CMSIS/Include -I../Libraries/Device/STM32F4xx/Include -I../Libraries/STM32F4xx_StdPeriph_Driver/inc -I../Utilities/STM32F4-Discovery -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o src\main.o 
..\src\main.c: In function 'Task2Command':
..\src\main.c:158:3: error: conversion to non-scalar type requested
   appCmd = (APP_COMMAND_t)pvPortMalloc(sizeof(APP_COMMAND_t));
   ^~~~~~

14:15:59 Build Finished (took 175ms)

